k8s/services/teamspeak/app/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: teamspeak
          image: mbentley/teamspeak:debian
          imagePullPolicy: Always
          ports:
            - name: voice
              containerPort: 9987
              protocol: UDP
            - name: http
              containerPort: 10080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: teamspeak-data
