k8s/services/teamspeak/app/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: teamspeak
  annotations:
    lbipam.cilium.io/sharing-key: voice
    lbipam.cilium.io/sharing-cross-namespace: services-teamspeak-sdlh
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: voice
      port: 9987
      targetPort: voice
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: teamspeak-mgmt
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 10080
