k8s/services/teamspeak/app/base/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-voice
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: teamspeak
  ingress:
    - fromEntities:
        - world
    - toPorts:
        - ports:
            - port: "9987"
              protocol: UDP
